--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -3,7 +3,7 @@
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new micropost..." %>
     
-    <%= f.file_field :avatar, multiple: true %>
+    <%= f.file_field :avatar %>
     <%= f.hidden_field :avatar_cache %>
     
   </div>
